[package]
name = "dkg-runtime-primitives"
version = "0.0.1"
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true }
tiny-keccak = { version = "2.0.1", default-features = false, features = [
	"keccak",
] }
ethereum = { version = "0.14.0", default-features = false, features = [
	"with-codec",
] }
ethereum-types = { version = "0.14.1", default-features = false }
webb-proposals = { workspace = true }

sp-api = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-application-crypto = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"webb-proposals/std",
	"sp-io/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-application-crypto/std",
	"frame-system/std",
	"frame-support/std",
	"webb-proposals/std",
]
testing = []
