[package]
name = "dkg-runtime"
version = "0.0.1"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.11', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.11', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.11', default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.11', default-features = false  }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-std/std",
]