[package]
name = "dkg-test-orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros", "process"] }
toml = { workspace = true, features = ["parse"] }
dkg-mock-blockchain = { workspace = true }
dkg-logging = { workspace = true }
structopt = { workspace = true }
log = { workspace = true }
futures = { workspace = true }