[package]
name = "dkg-test-orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-tracing = ["dkg-gadget/debug-tracing"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros", "process"] }
toml = { workspace = true, features = ["parse"] }
dkg-mock-blockchain = { workspace = true }
dkg-logging = { workspace = true }
dkg-gadget = { workspace = true, features = ["testing"] }
structopt = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true }
hash-db = { workspace = true }
dkg-runtime-primitives = { workspace = true, features = ["testing", "std"] }
dkg-primitives = { workspace = true }
pallet-dkg-metadata = { workspace = true }
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
sp-runtime = { workspace = true }
sc-network = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
frame-support = { workspace = true }
rand = "0.8.5"