[package]
name = 'primitives'
authors = ['Anonymous']
description = 'Primitives and traits for pallets'
version = '0.1.0'
license = 'Unlicense'
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

# [dev-dependencies]
# serde = { version = "1.0.119" }
# sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
# sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
# sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
]
