[package]
name = "webb-relayer-gadget"
version = "0.0.1"
authors = ["Webb Developers <dev@webb.tools>", "Shady Khalifa <dev+github@shadykhalifa.me>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tracing = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
tokio = { workspace = true }

sp-application-crypto = { workspace = true }
sp-keystore = { workspace = true }
sc-keystore = { workspace = true }

# Relayer
[dependencies.webb-relayer]
git = "https://github.com/webb-tools/relayer"
branch = "shady/downgrade-prometheus"
version = "0.5.5-dev"
default-features = false
features = ["evm-runtime", "substrate-runtime"]

[dependencies.webb-relayer-config]
git = "https://github.com/webb-tools/relayer"
branch = "shady/downgrade-prometheus"
version = "0.5.5-dev"
default-features = false
features = ["evm-runtime", "substrate-runtime"]

[dependencies.webb-relayer-context]
git = "https://github.com/webb-tools/relayer"
branch = "shady/downgrade-prometheus"
version = "0.5.5-dev"
default-features = false


[dependencies.webb-relayer-store]
git = "https://github.com/webb-tools/relayer"
branch = "shady/downgrade-prometheus"
version = "0.5.5-dev"
default-features = false
