[package]
name = "webb-relayer-gadget"
version = "0.0.1"
authors = ["Webb Developers <dev@webb.tools>", "Shady Khalifa <dev+github@shadykhalifa.me>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tracing = { workspace = true }
ethereum-types = { workspace = true }

# Substrate
sp-application-crypto = { workspace = true }
sp-keystore = { workspace = true }
sc-keystore = { workspace = true }

# Relayer
webb-relayer = { version = "0.5.5-dev", git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-context = { version = "0.5.5-dev", git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-config = { version = "0.5.5-dev", git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-store = { version = "0.5.5-dev", git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-types = { version = "0.5.5-dev", git = "https://github.com/webb-tools/relayer", branch = "develop" }

# DKG
dkg-runtime-primitives = { workspace = true }
