[package]
name = 'dkg-runtime'
authors = ['Webb tools']
description = 'A new Cumulus FRAME-based Substrate Runtime, ready for hacking.'
license = 'Unlicense'
version = '3.0.0'
homepage = 'https://webb.tools'
repository = "https://github.com/webb-tools/dkg-substrate"
edition = '2018'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Local Dependencies
template = { package = 'pallet-template', path = '../pallets/template', default-features = false }
parachain-staking = { package = 'pallet-parachain-staking', path = '../pallets/parachain-staking', default-features = false }
pallet-dkg-metadata = { path = '../pallets/dkg-metadata', default-features = false }
pallet-dkg-mmr = { path = '../pallets/dkg-mmr', default-features = false }
dkg-runtime-primitives = { path = '../dkg-runtime-primitives', default-features = false }
pallet-dkg-proposals = { path = '../pallets/dkg-proposals', default-features = false }
pallet-dkg-proposal-handler = { path = '../pallets/dkg-proposal-handler', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }

## Substrate FRAME Dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }


# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'master', default-features = false }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'master', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'template/runtime-benchmarks',
]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	'frame-benchmarking/std',
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-xcm/std",
	"polkadot-parachain/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	'template/std',
	'pallet-authorship/std',
	'pallet-session/std',
	'parachain-staking/std',
	'pallet-dkg-metadata/std',
	'dkg-runtime-primitives/std',
	'pallet-dkg-proposals/std',
	'pallet-dkg-proposal-handler/std',
	'pallet-dkg-mmr/std',
	'pallet-mmr/std'
]
